Add centers of mass, relative motion. Remake kinetics of rigid bodies

--- a/dyn/rec.html
+++ b/dyn/rec.html
@@ -101,7 +101,7 @@
                     <div class="envBody">
                         <p>
                             \[\begin{aligned}
-                            \sum \vec{F} &amp;= \frac{d\vec{p}_C}{dt}\\
+                            \vec{F} &amp;= \frac{d\vec{p}_C}{dt}\\
                             &amp;= \dot{\vec{p}_C}
                             \end{aligned}\]
                         </p>
@@ -112,14 +112,14 @@
                         <p>
                             We begin with Newton's second law:
                             \[\begin{aligned}
-                            \sum \vec{F} &amp;= m\vec{a}_C\\
+                            \vec{F} &amp;= m\vec{a}_C\\
                             &amp;= m \frac{d\vec{v}_C}{dt} \\
                             \end{aligned}\]
                         </p>
                         <p>
                             Assuming constant mass, then this can be rewritten as:
                             \[\begin{aligned}
-                            \sum \vec{F} &amp;= \frac{d}{dt} (m\vec{v}_C)\\
+                            \vec{F} &amp;= \frac{d}{dt} (m\vec{v}_C)\\
                             &amp; = \frac{d\vec{p}_C}{dt} \\
                             &amp; = \dot{\vec{p}_C}
                             \end{aligned}\]
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="envContainer warning" id="rec-wm">
-                    <p class="envHeader">Warning: $\sum \vec{F} = \dot{\vec{p}_C}$ is not applicable with variable mass.</p>
+                    <p class="envHeader">Warning: $\vec{F} = \dot{\vec{p}_C}$ is not applicable with variable mass.</p>
                     <div class="envBody">
                         <p>
                             In the derivation of <a href="#rec-mn">#ren-mn</a>, the mass was assumed to be constant.
@@ -146,7 +146,7 @@
                     <div class="envBody">
                         <p>
                             \[\begin{aligned}
-                            \sum \vec{M}_{C} &amp;= \frac{d\vec{L}_C}{dt}\\
+                             \vec{M}_{C} &amp;= \frac{d\vec{L}_C}{dt}\\
                             &amp;= \dot{\vec{L}_C}
                             \end{aligned}\]
                         </p>
@@ -157,14 +157,14 @@
                         <p>
                             We begin with Newton's second law:
                             \[\begin{aligned}
-                            \sum \vec{M}_{C} &amp;= I_{C, \hat{a}}\vec{\alpha}\\
+                             \vec{M}_{C} &amp;= I_{C, \hat{a}}\vec{\alpha}\\
                             &amp;= I_{C, \hat{a}} \frac{d\vec{\omega}}{dt} \\
                             \end{aligned}\]
                         </p>
                         <p>
                             Assuming constant moment of inertia, then this can be rewritten as:
                             \[\begin{aligned}
-                            \sum \vec{M}_{C} &amp;= \frac{d}{dt} (I_{C, \hat{a}}\vec{\omega})\\
+                             \vec{M}_{C} &amp;= \frac{d}{dt} (I_{C, \hat{a}}\vec{\omega})\\
                             &amp; = \frac{d\vec{L}_C}{dt} \\
                             &amp; = \dot{\vec{L}_C}
                             \end{aligned}\]
@@ -182,7 +182,7 @@
                     <div class="envBody">
                         <p>
                             \[\begin{aligned}
-                            \sum \vec{F} &amp;= \frac{d\vec{p}_C}{dt}\\
+                             \vec{F} &amp;= \frac{d\vec{p}_C}{dt}\\
                             &amp;= \vec{0}
                             \end{aligned}\]
                         </p>
@@ -204,7 +204,7 @@
                     <div class="envBody">
                         <p>
                             \[\begin{aligned}
-                            \sum \vec{M}_{C} &amp;= \frac{d\vec{L}_C}{dt}\\
+                             \vec{M}_{C} &amp;= \frac{d\vec{L}_C}{dt}\\
                             &amp;= \vec{0}
                             \end{aligned}\]
                         </p>
@@ -242,7 +242,7 @@
                                 <p>
                                     Write <a href="#rec-mn">Newton's second law in terms of momentum</a>:
                                     \[\begin{aligned}
-                                    \sum \vec{F} &amp;= \frac{d\vec{p}_C}{dt} \\
+                                     \vec{F} &amp;= \frac{d\vec{p}_C}{dt} \\
                                     m\vec{g} &amp; = \frac{d\vec{p}_C}{dt}
                                     \end{aligned}\]
                                 </p>
@@ -285,7 +285,7 @@
                                 <p>
                                     Write <a href="#rec-mm">Newton's second law in terms of momentum</a>:
                                     \[\begin{aligned}
-                                    \sum \vec{M}_C &amp;= \frac{d\vec{L}}{dt} \\
+                                     \vec{M}_C &amp;= \frac{d\vec{L}}{dt} \\
                                     \vec{r} \times m\vec{g} - \vec{r} \times m\vec{g} &amp; = \frac{d\vec{L}}{dt}
                                     \end{aligned}\]
                                 </p>
@@ -318,7 +318,7 @@
                         <p>
                             Begin with the relationship between angular momentum and moment at <a href="#rec-mm">#rec-mm</a>
                             \[\begin{aligned}
-                            \sum \vec{M}_C &amp;= \frac{d\vec{L}}{dt}\\
+                             \vec{M}_C &amp;= \frac{d\vec{L}}{dt}\\
                             \end{aligned}\]
                         </p>
                         <p>
@@ -400,7 +400,7 @@
                     <div class="envBody">
                         <p>
                             \[
-                            \vec{J} = \int_{t_1}^{t_2} \sum \vec{F} \, dt
+                            \vec{J} = \int_{t_1}^{t_2}  \vec{F} \, dt
                             \]
                         </p>
                     </div>
@@ -428,7 +428,7 @@
                         <p>
                             From Newton's second law and linear momentum at <a href="#rec-mn">#rec-mn</a>:
                             \[
-                            \sum \vec{F} = \frac{d\vec{p}_C}{dt}
+                             \vec{F} = \frac{d\vec{p}_C}{dt}
                             \]
                         </p>
                         <p>
@@ -514,41 +514,41 @@
                         <p>
                             By the impulse-momentum theorem:
                             \[\begin{aligned}
-                            \vec{J} = \Delta \vec{p}_C = \sum \vec{F} dt
+                            \vec{J} = \Delta \vec{p}_C =  \vec{F} dt
                             \end{aligned}\]
                         </p>
                         <p>
                             Plugging into the above equation:
                             \[\begin{aligned}
-                            (m + \dot{m}dt)(\vec{v} + d\vec{v}) - \dot{m}dt(\vec{c} + \vec{v}) - m\vec{v} = \sum \vec{F} dt
+                            (m + \dot{m}dt)(\vec{v} + d\vec{v}) - \dot{m}dt(\vec{c} + \vec{v}) - m\vec{v} =  \vec{F} dt
                             \end{aligned}\]
                         </p>
                         <p>
                             Expanding:
                             \[\begin{aligned}
-                            m\vec{v} + md\vec{v} + \dot{m}\vec{v}dt + \dot{m}d\vec{v}dt - \dot{m}\vec{c}dt - \dot{m}\vec{v}dt - m\vec{v} = \sum \vec{F} dt
+                            m\vec{v} + md\vec{v} + \dot{m}\vec{v}dt + \dot{m}d\vec{v}dt - \dot{m}\vec{c}dt - \dot{m}\vec{v}dt - m\vec{v} =  \vec{F} dt
                             \end{aligned}\]
                         </p>
                         <p>
                             Simplifying:
                             \[\begin{aligned}
-                            md\vec{v} + \dot{m}d\vec{v}dt - \dot{m}\vec{c}dt &amp;= \sum \vec{F}dt \\
-                            md\vec{v} + \dot{m}dt(d\vec{v} - \vec{c}) &amp;= \sum \vec{F}dt
+                            md\vec{v} + \dot{m}d\vec{v}dt - \dot{m}\vec{c}dt &amp;=  \vec{F}dt \\
+                            md\vec{v} + \dot{m}dt(d\vec{v} - \vec{c}) &amp;=  \vec{F}dt
                             \end{aligned}\]
                         </p>
                         <p>
                             Dividing by $dt$:
                             \[\begin{aligned}
-                            m\frac{d\vec{v}}{dt} + \dot{m}(d\vec{v} - \vec{c}) &amp;= \sum \vec{F} \\
-                            m\vec{a} + \dot{m}(d\vec{v} - \vec{c}) &amp;= \sum \vec{F}
+                            m\frac{d\vec{v}}{dt} + \dot{m}(d\vec{v} - \vec{c}) &amp;=  \vec{F} \\
+                            m\vec{a} + \dot{m}(d\vec{v} - \vec{c}) &amp;=  \vec{F}
                             \end{aligned}\]
                         </p>
                         <p>
                             This shows that Newton's equations in linear momentum form do not work
-                            with variable mass, as $\sum \vec{F} - m\vec{a}$ is not zero in this case.
+                            with variable mass, as $ \vec{F} - m\vec{a}$ is not zero in this case.
                             Rearranging one more time:
                             \[\begin{aligned}
-                            m\frac{d\vec{v}}{dt} = \dot{m}(d\vec{v} - \vec{c}) + \sum \vec{F}
+                            m\frac{d\vec{v}}{dt} = \dot{m}(d\vec{v} - \vec{c}) +  \vec{F}
                             \end{aligned}\]
                         </p>
                         <p>
