--- a/dyn/rkc.html
+++ b/dyn/rkc.html
@@ -310,7 +310,7 @@
                 </div>
             </div>
             <div class="infoCol">
-                <div class="infoBox conceptsBox">
+                <div class="infoBox requirementsBox">
                     <p>
                         <ul>
                             <li><a href="rvc.html">Calculus and vectors</a></li>
