--- a/dyn/rvn.html
+++ b/dyn/rvn.html
@@ -346,6 +346,18 @@
             </td>
           </tr>
           <!-- ######################################## -->
+          <tr>
+            <td>
+              $\bigoplus$
+            </td>
+            <td>
+              Center of mass. Sometimes used instead of $C$ if there are too many points on a body or to avoid confusion.
+            </td>
+            <td>
+              <tt>\$\bigoplus, \oplus\$</tt>
+            </td>
+          </tr>
+          <!-- ######################################## -->
         </table>
       </div>
       <div class="infoCol"></div>
