--- a/dyn/ref.html
+++ b/dyn/ref.html
@@ -60,7 +60,7 @@
                 <li><a href="rvp.html">Positions and coordinates</a></li>
                 <li><a href="rvv.html">Vectors and bases</a></li>
                 <li><a href="rvi.html">Vector identities</a></li>
-                <li><a href="rvc.html">Calculus and vectors</a></li>
+                <li><a href="rvc.html">Vector calculus</a></li>
                 <li><a href="rvy.html">Cylindrical coordinates</a></li>
                 <li><a href="rvs.html">Spherical coordinates</a></li>
                 <li><a href="rvn.html">Notation</a></li>
@@ -76,7 +76,7 @@
                 <li><a href="rkg.html">Rigid bodies</a></li>
                 <li><a href="rkc.html">Constraints and constrained motion</a></li>
                 <li><a href="rko.html">Rolling motion</a></li>
-                <li>Relative motion and frames</li>
+                <li><a href="rkf.html">Relative motion and frames</a></li>
               </ol>
             </li>
           </ol>
@@ -88,8 +88,8 @@
                 <li><a href="rep.html">Kinetics of point masses</a></li>
                 <li><a href="reg.html">Kinetics of rigid bodies</a></li>
                 <li><a href="rem.html">Moments of inertia</a></li>
+                <li><a href="rcm.html">Centers of mass</a></li>
                 <li><a href="rfb.html">Free body diagrams</a></li>
-                <li>Accelerating coordinate frames</li>
                 <li><a href="ren.html">Energy and work</a></li>
                 <li><a href="rec.html">Momentum, impulse, and collisions</a></li>
                 <li><a href="rfr.html">Friction and damping</a></li>
