--- a/dyn/rvc.html
+++ b/dyn/rvc.html
@@ -38,7 +38,7 @@
       })();
     </script>
     
-    <title>Calculus and vectors</title>
+    <title>Vector calculus</title>
     <link href="rvc.css" type="text/css" rel="stylesheet" />
     <script src="rvc.js" type="text/javascript"></script>
     
@@ -54,7 +54,7 @@
     <div class="contentBlock">
       <div id="rvc" class="contentCol">
         <h1>
-          Calculus and vectors
+          Vector calculus
         </h1>
         <p>
           Time-dependent vectors can be differentiated in exactly
