Fall 2023 updates: Covid policy, student code link, final exam policy wording

--- a/pol/policies.html
+++ b/pol/policies.html
@@ -20,7 +20,7 @@
 		});
 	</script>
 	
-	<title>Fall 2022 Policies</title>
+	<title>Fall 2023 Policies</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
 						<a href="#Special accommodations">Special accommodations</a>
 					</p> -->
 
-					<h3><strong><a id="COVID19" name="COVID19">COVID-19 Expectations</a>:</strong></h3>
+					<!-- <h3><strong><a id="COVID19" name="COVID19">COVID-19 Expectations</a>:</strong></h3>
 
 					<p>Following University policy, all students are required to engage in appropriate behavior to 
 					protect the health and safety of the community. 
@@ -62,7 +62,7 @@
 					<p>Students who test positive for COVID-19 through a SHIELD Illinois community testing site 
 					must not attend class. These students are judged to have excused absences for the 
 					class period and should submit an excused absence request form found on the course webpage
-					to receive accommodations.</p>
+					to receive accommodations.</p> -->
 					
 					<h3><strong><a id="Absences" name="Absences">Absences</a>:</strong></h3>
 
@@ -95,7 +95,7 @@
 
 					<p>Academic integrity infractions, harassment, and discrimination of any kind will not be tolerated.
 						See the University&#39;s <a href="http://www.admin.illinois.edu/policy/code/">Student Code</a>,
-						<a href="http://www.admin.illinois.edu/policy/code/article1_part4_1-401.html">Article 1, Part
+						<a href="https://studentcode.illinois.edu/article1/part4/1-401/">Article 1, Part
 							4</a> and the <a href="http://oeoa.illinois.edu/campusconduct.html">Campus Conduct
 							Policy</a>. Please report any concerns immediately to your professor.</p>
 
@@ -380,8 +380,7 @@
 
 					<h3><strong><a id="FinalExam" name="FinalExam">Final Exam</a>:</strong></h3>
 
-					<p>The final exam will be held in the CBTF during finals week, and will be cumulative (covering all
-						course material).</p>
+					<p>Please visit each course's home page for details regarding the final exam.</p>
 				</div>
 			</div>
 		</div>
