Remove link to *mass* moment of inertia on the TAM 212 ref pages

--- a/sta/ref.html
+++ b/sta/ref.html
@@ -36,7 +36,7 @@
 						<li><a href="#">Structural analysis</a></li>
 						<li><a href="../sol/signConvention.html" id="navSolRef">Internal Loading</a></li>
 						<li><a href="../dyn/rfr.html">Friction and damping</a></li>
-						<li><a href="../dyn/rem.html">Moments of inertia</a></li>
+						<li><a href="#">Moments of inertia</a></li>
 						<li><a href="#">Hydrostatic fluid pressure</a></li>
 						<li><a href="#">Virtual work</a></li>
 					</ol>
