--- a/public/sta/trees/vectors_scalars.html
+++ b/public/sta/trees/vectors_scalars.html
@@ -25,6 +25,8 @@
                 <ul class='list-group list-group-flush py-0'> 
                     <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#cross_product_identities'>Cross Product Identities</a>
                     </li> 
+                    <li class='list-group-item py-0'><a class='text-decoration-none subsubsubsection' href='#calculating_the_cross_product'>Calculating the Cross Product</a>
+                    </li> 
                 </ul>
             </li> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#vector_projection'>Vector Projection</a>
